--- a/templates/dashboard/partials/tile.html
+++ b/templates/dashboard/partials/tile.html
@@ -2,10 +2,14 @@
     <div class="col-lg-12">
         <div class="card">
             <div class="card-header card-default">
-                <i class="fa fa-bar-chart-o fa-fw"></i> Title
+                <i class="fa fa-bar-chart-o fa-fw"></i> Stats
             </div>
             <div class="card-block">
-                Grid
+                
+                  <li>3 trips are in <a href="javascript:navigateToPage('Running');">Running</a> state currently. <br></li>
+                  
+                  <li>1 trip is waiting to be <a href="javascript:navigateToPage('Assigned');">Assigned </a></li>
+
 
                 <div class="text-xs-right">
                     <a href="javascript:;">View Details <i class="fa fa-arrow-circle-right"></i></a>
