--- a/templates/dashboard/pages/manageTrip/manageTrip.html
+++ b/templates/dashboard/pages/manageTrip/manageTrip.html
@@ -4,12 +4,18 @@
                     <li class="active">
                             <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="fa {{pageIcon}}"></i>  <BtnCaption>{{pageSubHeading}}</BtnCaption>  
+                            <i class="fa {{pageIcon}}"></i> 
+                             {{#if extraOptions.data}}
+                             <BtnCaption>{{extraOptions.data.status}}</BtnCaption>  
+                             {{else}}
+                             <BtnCaption>{{pageSubHeading}}</BtnCaption>  
+                             {{/if}}
                         </button>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                             <a class="dropdown-item" href="javascript:statusChanged('New');">New Trips</a>
                             <a class="dropdown-item" href="javascript:statusChanged('Quoted');">Quoted</a>
                             <a class="dropdown-item" href="javascript:statusChanged('Paymentpending');">Payment Pending</a>
+                            <a class="dropdown-item" href="javascript:statusChanged('Paymentmade');">Payment Made</a>
                             <a class="dropdown-item" href="javascript:statusChanged('Running');">Running</a>
                             <a class="dropdown-item" href="javascript:statusChanged('Assigned');">Assigned</a>
                             <a class="dropdown-item" href="javascript:statusChanged('Successful');">Successful</a>
@@ -174,6 +180,33 @@
                 </div>  
             </div>
             {{/if}}
+
+            {{#if truckdetails}}            
+            <div class="grid-row-title">Truckdetails:</div>  
+            <div class="row">     
+                <div class="grid-row-tile col-sm-12">                
+                    <div>
+                        <span class="grid-row-tile-text">
+                           {{plateNumber}} {{truckType}}
+                        </span>
+                    </div>                                           
+                </div>  
+            </div>
+        {{/if}} 
+
+            {{#if currentPoint}}            
+            <div class="grid-row-title">Current location:</div>  
+            <div class="row">     
+                <div class="grid-row-tile col-sm-12">                
+                    <div>
+                        <span class="grid-row-tile-text">
+                        {{currentPoint}}
+                        </span>
+                    </div>                                           
+                </div>  
+            </div>
+        {{/if}} 
+
             {{#if quotes}}
                 <div class="grid-row-title">Quote:</div> 
                 <div class="row">     
@@ -215,4 +248,31 @@
     </div>
   </div>
 </script>
+
+<script id="viewquotesmodal" type="text/x-handlebars-template"> 
+    <div class="modal fade" id="viewquotesmodalid" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+             <div class="modal-dialog">
+                 <div class="modal-content">
+                   <div class="modal-header">
+                       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                           &times;
+                       </button>
+                       <h4 class="modal-title" id="myModalLabel">Are you sure?</h4>
+                   </div>
+                   <div class="modal-body myModalclass">
+                        If approved, payment is mandatory and once payment is received suitable truck & driver will be assigned to your trip.
+                   </div>
+                       
+                   <div class="modal-footer">
+                        <button type="submit" id="yes" class="btn btn-primary" name="submit" value="submit">
+                          Yes
+                      </button> 
+                       <button name="cancel" value="cancel" class="btn btn-default" data-dismiss="modal">
+                           Cancel
+                       </button>
+                   </div>
+                   </div>
+                   </div> 
+        </div>
+    </script> 
 {{{{/raw-helper}}}}
