--- a/templates/dashboard/partials/cards.html
+++ b/templates/dashboard/partials/cards.html
@@ -8,7 +8,7 @@
                                 <i class="fa fa-envelope  fa-4x"></i>
                             </div>
                             <div class="col-xs-9 text-xs-right">
-                                <div class="huge">0</div>
+                                <div class="huge"></div>
                                 <div>{{this.menu.SideMenu.0.options.0.title}}</div>
                             </div>
                         </div>
@@ -31,7 +31,7 @@
                                 <i class="fa fa-truck  fa-4x"></i>
                             </div>
                             <div class="col-xs-9 text-xs-right">
-                                <div class="huge">0</div>
+                                <div class="huge"></div>
                                 <div>{{this.menu.SideMenu.0.options.1.title}}</div>
                             </div>
                         </div>
@@ -53,7 +53,7 @@
                                 <i class="fa fa-suitcase fa-4x"></i>
                             </div>
                             <div class="col-xs-9 text-xs-right">
-                                <div class="huge">0</div>
+                                <div class="huge"></div>
                                 <div>{{this.menu.SideMenu.0.options.2.title}}</div>
                             </div>
                         </div>
@@ -74,8 +74,8 @@
                             <div class="col-xs-3">
                                 <i class="fa fa-ticket fa-4x"></i>
                             </div>
-                            <div class="col-xs-9 text-xs-right">
-                                <div class="huge">0</div>
+                            <div class="col-xs-9 text-xs-right align-bottom">
+                                <div class="huge"></div>
                                 <div>{{this.menu.SideMenu.0.options.3.title}}</div>
                             </div>
                         </div>
