--- a/templates/dashboard/partials/cards.html
+++ b/templates/dashboard/partials/cards.html
@@ -5,7 +5,7 @@
                     <div class="card-header card-green">
                         <div class="row">
                             <div class="col-xs-3">
-                                <i class="fa fa-envelope  fa-4x"></i>
+                                <i class="fa {{this.menu.SideMenu.0.options.0.icon}} fa-4x"></i>
                             </div>
                             <div class="col-xs-9 text-xs-right">
                                 <div class="huge"></div>
@@ -28,7 +28,7 @@
                     <div class="card-header card-green">
                         <div class="row">
                             <div class="col-xs-3">
-                                <i class="fa fa-truck  fa-4x"></i>
+                                <i class="fa {{this.menu.SideMenu.0.options.1.icon}}  fa-4x"></i>
                             </div>
                             <div class="col-xs-9 text-xs-right">
                                 <div class="huge"></div>
@@ -50,7 +50,7 @@
                     <div class="card-header card-yellow">
                         <div class="row">
                             <div class="col-xs-3">
-                                <i class="fa fa-suitcase fa-4x"></i>
+                                <i class="fa {{this.menu.SideMenu.0.options.2.icon}} fa-4x"></i>
                             </div>
                             <div class="col-xs-9 text-xs-right">
                                 <div class="huge"></div>
@@ -72,7 +72,7 @@
                     <div class="card-header card-red">
                         <div class="row">
                             <div class="col-xs-3">
-                                <i class="fa fa-ticket fa-4x"></i>
+                                <i class="fa {{this.menu.SideMenu.0.options.3.icon}} fa-4x"></i>
                             </div>
                             <div class="col-xs-9 text-xs-right align-bottom">
                                 <div class="huge"></div>
