--- a/templates/dashboard/partials/usermenu.html
+++ b/templates/dashboard/partials/usermenu.html
@@ -1,12 +1,12 @@
   <ul class="dropdown-menu">
     <li class="dropdown-item">
-        <a href="javascript:;"><i class="fa fa-fw fa-user"></i> Profile</a>
+        <a href="javascript:MENU_HELPER.menuClick('viewProfile');"><i class="fa fa-fw fa-user"></i> Profile</a>
     </li>
-    <li class="dropdown-item">
+  <!--   <li class="dropdown-item">
         <a href="javascript:;"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
-    </li>
+    </li> -->
     <li class="dropdown-item">
-        <a href="javascript:;"><i class="fa fa-fw fa-gear"></i> Settings</a>
+        <a href="javascript: MENU_HELPER.menuClick('updateProfile');"><i class="fa fa-fw fa-key"></i>Change Password</a>
     </li>
     <li class="divider"></li>
     <li class="dropdown-item">
