--- a/templates/dashboard/pages/addTruck.html
+++ b/templates/dashboard/pages/addTruck.html
@@ -1,4 +1,7 @@
 {{{{raw-helper}}}}
+<style>
+.alpaca-field-object{border:0 solid #eee;border-radius:0;padding:10px}
+</style>
 {{{{/raw-helper}}}}
 {{> header}}
 <div class='new-trucks'>
@@ -7,6 +10,6 @@
 </div> 
 {{{{raw-helper}}}}
 <script type="text/javascript">
-    console.log("truck template data",UTILS.getCurrentTemplateData()),$(document).ready(function(){var e=UTILS.getCurrentTemplateData();FORM_HELPER.draw(".new-trucks-content",e,{bindings:{plateNumber:"column-1",model:"column-2",truckType:"column-1",description:"column-2",capacity:"column-1",capacityUnits:"column-2",insurance:"column-1",material:"column-2",currentPoint:"column-1",status:"column-2",currentPoint:"column-1",nextAvailableAt:"column-2",nextFreeDate:"column-1"},schemaOverride:{dependencies:{currentPoint:["status"],nextAvailableAt:["status"],nextFreeDate:["status"]}},optionsOverride:{fields:{currentPoint:{dependencies:{status:"busy"}},nextAvailableAt:{dependencies:{status:"busy"}},nextFreeDate:{dependencies:{status:"busy"}}}},callbacks:{preRender:function(e){},beforeSubmit:function(){},afterSubmit:function(){MENU_HELPER.menuClick("manageTruck","manageTruck")},onSubmitError:function(){},postRender:function(){}},postUrl:"trucks/service/addTruck"})});
+    console.log("truck template data",UTILS.getCurrentTemplateData()),$(document).ready(function(){var e=UTILS.getCurrentTemplateData();FORM_HELPER.draw(".new-trucks-content",e,{bindings:{plateNumber:"column-1",model:"column-2",truckType:"column-1",description:"column-2",capacity:"column-1",capacityUnits:"column-2",insurance:"column-1",material:"column-2"},schemaOverride:{fields:{material:{title:""}}},optionsOverride:{fields:{}},callbacks:{preRender:function(e){},beforeSubmit:function(){},afterSubmit:function(){MENU_HELPER.menuClick("manageTruck","manageTruck")},onSubmitError:function(){},postRender:function(){}},postUrl:"trucks/service/addTruck"})});
 </script>
 {{{{/raw-helper}}}}
