--- a/templates/dashboard/partials/topmenu.html
+++ b/templates/dashboard/partials/topmenu.html
@@ -1,17 +1,13 @@
             <!-- Top Menu Items -->
             <ul class="nav navbar-nav top-nav navbar-right pull-right pull-xs-right">
-                <li class="dropdown nav-item active">
-                    <!-- <div class="dropdown"> -->
+           <!--      <li class="dropdown nav-item active">
                         <a class="nav-link dropdown-toggle" href="javascript:;" id="dropdownMenu4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-envelope"></i> <b class="caret"></b><span class="sr-only">(current)</span></a>
                         {{> messagemenu}}
-                    <!-- </div> -->
                 </li>
                 <li class="dropdown nav-item">
-                    <!-- <div class="dropdown"> -->
                         <a href="javascript:;" class="nav-link dropdown-toggle" data-toggle="dropdown"  aria-haspopup="true" aria-expanded="false"><i class="fa fa-bell"></i> <b class="caret"></b><span class="sr-only">(current)</span></a>
                         {{> alertmenu}}                       
-                    <!-- </div> -->
-                </li>
+                </li> -->
                 <li class="dropdown nav-item">
                     <a href="javascript:;" class="nav-link dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{ loggedInUser.name }} <b class="caret"></b></a>
                         {{> usermenu}}
