callcenter user changes

--- a/less/dashboard/style.less
+++ b/less/dashboard/style.less
@@ -27,7 +27,7 @@ footer {
     color: @theme-logo-color !important;
     font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
 }
-
+  
 .navbar-brand:hover {
     color: #fff!important;
 }
@@ -69,6 +69,14 @@ footer {
         padding: 10px;
     }
 }
+
+.currentuser {
+    position:fixed;
+    z-index:10;
+    right:0;
+    margin-right:10px;
+}
+
 
 /* Top Navigation */
 
