--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -1,12 +1,42 @@
 {{> navbar}}
-
 <div id="page-wrapper">
-    <div class="container-fluid">        
+        {{#ifEquals loggedInUser.role "CALL_CENTER_USER"}}
+        <div class="currentuser" >
+    
+                    <!--   <div class="pull-right" style="margin-right:10px;margin-top:10px"> -->
+                   <!--  <a class="btn btn-large" href="#"  style="z-index:10;">
+                      <i class="fa fa-user-circle fa-3x" aria-hidden="true"></i>
+                    </a> -->
+                    {{#if loggedInUser.currentUser}}
+                            <!-- {{loggedInUser.currentUser}} -->
+                     {{else}}
+                        <a class="btn btn-large" href="#" data-toggle="modal" data-target="#myModal">
+                                <i class="fa fa-user-circle fa-3x" aria-hidden="true"></i>
+                        </a>
+                    {{/if}}  
+        </div>  
+        {{/ifEquals}}
+    <div class="container-fluid">      
         <div id="content-wrapper">  
              {{> (whichPage)}}
         </div>                    
     </div>
+
+<div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Select User</h4>
+            </div>
+            <div class="modal-body">
+            </div>
+          </div>
+          
+        </div>
+      </div>
 </div>
 {{> footer}}
+
 <!-- Theme JavaScript -->
 <script async src="js/dashboard/dashboard.min.js"></script>
