--- a/templates/dashboard/pages/home.html
+++ b/templates/dashboard/pages/home.html
@@ -1,10 +1,13 @@
 {{{{raw-helper}}}}
+<style>
+.float{position:fixed;width:60px;height:60px;bottom:40px;right:40px;background-color:#0c9;color:#fff;border-radius:50px;text-align:center;box-shadow:2px 2px 3px #999}.my-float{margin-top:22px}
+</style>
 {{{{/raw-helper}}}}
 {{> header}}
-{{> cards (getLoggedInUser)}}
+{{> cards (getLoggedInUser)}}           
 {{> tile}}
 {{{{raw-helper}}}}
 <script type="text/javascript">
-    $(document).ready(function(){navigateToPage=function(a){var n;switch(a){case"Quoted":case"Paymentpending":case"Running":case"Assigned":n={data:{status:a}},a="manageTrip"}MENU_HELPER.menuClick(a,a,n)}});
+    $(document).ready(function(){navigateToPage=function(e){var t;switch(e){case"Quoted":case"Paymentpending":case"Running":case"Assigned":t={data:{status:e}},e="manageTrip"}MENU_HELPER.menuClick(e,e,t)};var e=new Bloodhound({datumTokenizer:function(e){var t=Bloodhound.tokenizers.whitespace(e.value);return $.each(t,function(e,a){for(i=0;i<a.length;i++)t.push(a.substr(i,a.length)),i++}),t},queryTokenizer:Bloodhound.tokenizers.whitespace,prefetch:{url:CONSTANTS.apiServer+"users/service/manageUser",ajax:{type:"GET"},filter:function(e){return $.map(e.data,function(e){return{id:e._id,value:e.firstName+" "+e.lastName}})}}});e.clearPrefetchCache(),e.initialize(),$(".modal-body").alpaca({schema:{type:"object",properties:{userType:{type:"string","enum":["TRUCK_ADMIN","TRIP_ADMIN"],required:!1},userName:{type:"string"}}},options:{fields:{userType:{type:"select",label:"User Type:",hideNone:!0,helpers:[]},userName:{type:"text",label:"User Name:",helper:"Select user name",typeahead:{config:{autoselect:!0,highlight:!0,hint:!0,minLength:1},datasets:{name:"data",displayKey:"value",source:e.ttAdapter()}}}},form:{buttons:{submit:{title:"Submit",click:function(){console.log("Value is: ",this.getValue())}},cancel:{title:"Cancel",click:function(){$("#myModal").modal("hide")}}}}}}),chooseUser=function(){console.log()}});
 </script>
 {{{{/raw-helper}}}}
