callcenter viewAsUser , setQuote changes

--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -2,17 +2,18 @@
 <div id="page-wrapper">
         {{#ifEquals loggedInUser.role "CALL_CENTER_USER"}}
         <div class="currentuser" >
-    
-                    <!--   <div class="pull-right" style="margin-right:10px;margin-top:10px"> -->
-                   <!--  <a class="btn btn-large" href="#"  style="z-index:10;">
-                      <i class="fa fa-user-circle fa-3x" aria-hidden="true"></i>
-                    </a> -->
-                    {{#if loggedInUser.currentUser}}
-                            <!-- {{loggedInUser.currentUser}} -->
-                     {{else}}
-                        <a class="btn btn-large" href="#" data-toggle="modal" data-target="#myModal">
+                    {{#if (getViewAsUser)}}          
+                           <!--  {{this.userType}} -->
+                            <div class="img-wrap">
+                              <span class="close">&times;</span>
+                            <a class="btn btn-large" href="#" data-toggle="tooltip" data-placement="bottom" title='{{getViewAsUser}}'>
                                 <i class="fa fa-user-circle fa-3x" aria-hidden="true"></i>
-                        </a>
+                            </a>
+                          </div>
+                     {{else}}
+                         <a class="btn btn-large" href="#" data-toggle="modal" data-target="#myModal">
+                                <i class="fa fa-user-circle fa-3x" aria-hidden="true"></i>
+                        </a> 
                     {{/if}}  
         </div>  
         {{/ifEquals}}
