--- a/templates/dashboard/pages/setTripQuote/setTripQuote.html
+++ b/templates/dashboard/pages/setTripQuote/setTripQuote.html
@@ -1,5 +1,5 @@
 {{> header}}
 <div class='quote-trips'>
-    <div class='quote-trips-content'>
+    <div class='col-sm-9 quote-trips-content'>
     </div>
 </div> 
