--- a/less/dashboard/style.less
+++ b/less/dashboard/style.less
@@ -77,6 +77,32 @@ footer {
     margin-right:10px;
 }
 
+.img-wrap {
+    position: relative;
+    display: inline-block;
+/*     border: 1px red solid; */
+    font-size: 0;
+}
+.img-wrap .close {
+    position: absolute;
+    top: 2px;
+    right: 2px;
+    z-index: 100;
+    background-color: #FF0000;
+    padding: 5px 2px 2px;
+    color: #000;
+    font-weight: bold;
+    cursor: pointer;
+    opacity: .2;
+    text-align: center;
+    font-size: 22px;
+    line-height: 10px;
+    border-radius: 50%;
+}
+.img-wrap:hover .close {
+    opacity: 1;
+}
+
 
 /* Top Navigation */
 
